src/test/resources/org/xmlcml/www/convention/simpleUnit/valid/unitList-does-not-have-to-be-root-element-1.cml
<?xml version="1.0" encoding="UTF-8"?>
<x:p xmlns:x="http://www.w3.org/1999/xhtml">
    <cml:unitList convention="conventions:simpleUnit" xmlns:cml="http://www.xml-cml.org/schema"
                  xmlns:conventions="http://www.xml-cml.org/convention/">
        <cml:unit/>
    </cml:unitList>
</x:p>
